--- a/javascript2/Step02_map.html
+++ b/javascript2/Step02_map.html
@@ -11,7 +11,7 @@
     </ul>  
     <script>
         const names=["김구라","해골","원숭이"];
-        //배열의 아이템의 갯수만큼 즉시 호출된다.
+        //배열의 아이템의 갯수만큼 전달한 즉시 호출된다.
         const result =names.map((item)=>{
             /*
                 - 배열.map() 함수
@@ -22,6 +22,7 @@
             return `${item}님`;
         });
         //람다식 모양으로도 사용 가능
+        //단지 리턴하는 경우
         const result2=names.map(item=>`${item}님`);
         //html 형식의 문자열을 여러개 가지고 있는 배열도 만들 수 있다.
         const result3=names.map(item=>`<li>${item}</li>`);
