주석 추가가

--- a/javascript2/Step05_sort.html
+++ b/javascript2/Step05_sort.html
@@ -12,6 +12,7 @@
         //nums.sort((one, two)=>one-two);
         
         //nums 배열을 내림차순 정렬
+        //큰 값이 먼저 오도록 되어있다.
         nums.sort((one, two)=>two-one);
 
         //오름차순 정렬
