--- a/javascript2/Step06_destruct.html
+++ b/javascript2/Step06_destruct.html
@@ -10,8 +10,22 @@
         //배열의 구조를 분해해서 할당하기
         const[a,b] = [10,20];
         //object의 구조를 분해해서 할당하기
-        //addr, isMan 은 사용되지 않음
+        //object 필요한 것만 담는다.
         const {num,name} = {num:1, name:"김구라", addr:"노량진",isMan:true};
+
+        function useMem(arg){
+            const num=arg.num;
+            const name=arg.name;
+        }
+        //내가 원하는 정보만 구조를 분해해서 담을 수 있음(할당의 수고가 없어짐)
+        function useMem2({num,name}){
+            console.log(num+" | "+name);
+        }
+
+        const mem= {num:1, name:"김구라", addr:"노량진",isMan:true};
+
+        useMem(mem);
+        useMem2(mem);
     </script>
 </body>
 </html>
