--- a/javascript2/Step08_class.html
+++ b/javascript2/Step08_class.html
@@ -7,11 +7,11 @@
 </head>
 <body>
     <script>
-        //javascript 에도 class 개념이 잇다.
+        //javascript 에도 class 개념이 있다.
         class Car{
             //class 메소드
             drive(){
-                console.log("딜려요!");
+                console.log("달려요!");
             }
         }
         //단지 타입을 let으로 받는 점이 다름
@@ -35,20 +35,20 @@
         Person.showInfo();
 
         class Phone{
-            //생성자
-            //자바스크립트에서 생성자는 constructor를 사용한다.
-            constructor(name){
+            //생성자(다중정의가 필요 없음)
+            constructor(name,num,addr){
                 console.log("Phone 생성자 호출됨");
                 this.name=name; //필드를 직접 선언하지 않아도 자동으로 필드를 제작함
             }
 
             call(){
-                console.log(this.name+"전화를 걸어요!");
+                console.log(this.name+"전화를 걸어요!"); //this 생략 불가
             }
         }
 
         const p1=new Phone("iphone");
         const p2=new Phone("android");
+        
         p1.call();
         p2.call();
     </script>
